# krill-kmip-ttlv

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
docs/: crates.js  search-index.js  settings.html  source-files.js
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/serde/de/: trait.Error.js
docs/implementors/serde/ser/: trait.Error.js  trait.SerializeSeq.js  trait.SerializeStruct.js  trait.SerializeTupleStruct.js  trait.SerializeTupleVariant.js  trait.Serializer.js
docs/implementors/std/error/: trait.Error.js
docs/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/kmip_ttlv/: all.html  index.html  sidebar-items.js
docs/kmip_ttlv/de/: fn.from_reader.html  fn.from_slice.html  fn.to_string.html  index.html  struct.Config.html
docs/kmip_ttlv/error/: enum.Error.html  index.html  type.Result.html
docs/kmip_ttlv/ser/: fn.to_vec.html  fn.to_writer.html  index.html  sidebar-items.js  struct.TtlvSerializer.html
docs/krill_kmip_ttlv/: all.html  index.html
docs/krill_kmip_ttlv/de/: fn.from_reader.html  fn.from_slice.html  fn.to_string.html  index.html  sidebar-items.js  struct.Config.html
docs/krill_kmip_ttlv/error/: enum.Error.html  index.html  type.Result.html
docs/krill_kmip_ttlv/ser/: fn.to_vec.html  fn.to_writer.html  index.html  struct.TtlvSerializer.html
docs/src/kmip_ttlv/: de.rs.html  error.rs.html  lib.rs.html  ser.rs.html  types.rs.html
docs/src/krill_kmip_ttlv/: de.rs.html  error.rs.html  lib.rs.html  ser.rs.html  types.rs.html
examples/: hex_to_txt.rs
src/: de.rs  error.rs  lib.rs  macros.rs  ser.rs  traits.rs  types.rs  util.rs
src/tests/: de.rs  mod.rs  types.rs  util.rs
src/tests/fixtures/: kmip_10_create_destroy_use_case.rs  malformed_ttlv.rs  mod.rs  simple.rs  variant_selection.rs
