[package]
name = "kmip-ttlv"
version = "0.1.1-dev"
authors = ["The NLnet Labs RPKI Team <rpki-team@nlnetlabs.nl>"]
edition = "2018"
description = "KMIP TTLV (de)serialization"
license = "BSD-3-Clause"
repository = "https://github.com/NLnetLabs/kmip-ttlv/"
keywords = ["KMIP", "TTLV", "serde", "serialization"]
categories = ["cryptography", "data-structures", "encoding", "parser-implementations"]
exclude = ["/.github"]
readme = "README.md"
build = "build.rs"

[dependencies]
hex = "0.4.3"
log = "0.4.14"
serde = "1.0.126"

[build-dependencies]
rustc_version   = "0.2.3"

[dev-dependencies]
chrono = { version = "0.4.19", default-features = false }
num-bigint = "0.4.0"
pretty_assertions = "0.7.2"
serde_derive = "1.0.126"
