[package]
name = "kmip-ttlv"
version = "0.2.1-dev"
authors = ["The NLnet Labs RPKI Team <rpki-team@nlnetlabs.nl>"]
edition = "2018"
description = "KMIP TTLV (de)serialization"
license = "BSD-3-Clause"
repository = "https://github.com/NLnetLabs/kmip-ttlv/"
keywords = ["KMIP", "TTLV", "serde", "serialization"]
categories = ["cryptography", "data-structures", "encoding", "parser-implementations"]
exclude = ["/.github"]
readme = "README.md"
build = "build.rs"

[features]
default = ["high-level"]
high-level = ["hex", "serde"]

[dependencies]
hex = {version = "0.4.3", optional = true }
serde = { version = "1.0.126", optional = true }

[build-dependencies]
rustc_version   = "0.2.3"

[dev-dependencies]
assert_matches = "1.5.0"
chrono = { version = "0.4.19", default-features = false }
num-bigint = "0.4.0"
pretty_assertions = "0.7.2"
serde_bytes = "0.11.5"
serde_derive = "1.0.126"

# for examples/hex_to_text.rs
hex = "0.4.3"