[package]
name = "kmip-ttlv"
version = "0.3.6-dev"
authors = ["NLnet Labs <rpki-team@nlnetlabs.nl>"]
edition = "2018"
description = "KMIP TTLV (de)serialization"
license = "BSD-3-Clause"
repository = "https://github.com/NLnetLabs/kmip-ttlv/"
documentation = "https://docs.rs/kmip-ttlv/"
keywords = ["KMIP", "TTLV", "serde", "serialization"]
categories = ["cryptography", "data-structures", "encoding", "parser-implementations"]
exclude = ["/.github"]
readme = "README.md"
build = "build.rs"

[dependencies]
async-std = { version = "1.10.0", optional = true }
cfg-if = "1.0.0"
hex = {version = "0.4.3", optional = true }
maybe-async = "0.2.6"
serde = { version = "1.0.126", optional = true }
tokio = { version = "1.20.3", features = ["full"], optional = true }
trait-set = "0.2.0"

[features]
default = ["high-level", "sync"]
high-level = ["hex", "serde"]
sync = ["maybe-async/is_sync"]
async-with-async-std = ["async-std"]
async-with-tokio = ["tokio"]

[build-dependencies]
rustc_version   = "0.4.0"

[dev-dependencies]
assert_matches = "1.5.0"
chrono = { version = "0.4.19", default-features = false }
num-bigint = "0.4.0"
pretty_assertions = "1.3.0"
serde_bytes = "0.11.5"
serde_derive = "1.0.126"

# for examples/hex_to_text.rs
hex = "0.4.3"
